feat: Improve GlobalExceptionHandler with enhanced logging and message sanitization